--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="contact-form text-center">
-              <div class="card border-0 shadow pt-5 pb-3 px-3">
+              <div class="card border-0 shadow p-3">
                 <div class="card-body">
-                  <h4 class="my-4">Send Us a Massege</h4>
+                  <h4 class="mb-4">Send Us a Massege</h4>
                   <form action="#">
                     <input type="email" class="form-control form-control-lg mb-3" placeholder="E-mail Address">
                     <div class="row mb-3">
